iptables/firewall.v4
# Generated by iptables-save v1.6.0 on Tue Dec 11 20:31:47 2018
*filter
:INPUT ACCEPT [25:1760]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [298:28152]
:sshguard - [0:0]
-A INPUT -j sshguard
-A INPUT -i eth0 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.0.0/8 -i eth0 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -i eth0 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -i eth0 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -i eth0 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -i eth0 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 10.0.0.0/8 -j ACCEPT
-A OUTPUT -s 192.168.255.0/24 -j ACCEPT
-A OUTPUT -s 172.16.0.0/16 -j ACCEPT
-A OUTPUT -s 193.191.177.1/32 -j ACCEPT
-A OUTPUT -s 193.191.177.6/32 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A OUTPUT -s 193.191.177.1/32 -j ACCEPT
-A OUTPUT -s 193.191.177.6/32 -j ACCEPT
COMMIT
# Completed on Tue Dec 11 20:31:47 2018
